tests/cases/parser/patterns/incomplete_range_pat.stderr
error: expected an arrow `=>` 
 --> $DIR/incomplete_range_pat.hash:5:10
4 |       match k {
5 |           1.. => {};
  |            ^ here
6 |       }
